@@ -1,41 +1,40 @@
 package baseball.view;
 
-import baseball.validation.ExitValidation;
-import baseball.validation.PickNumberValidation;
+import baseball.domain.Answer;
+import baseball.domain.Answers;
 import camp.nextstep.edu.missionutils.Console;
 
 import java.util.Arrays;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 public class InputView {
-    private InputView() {    }
+    private final static String START_MESSAGE = "숫자 야구 게임을 시작합니다.";
+    private final static String INPUT_MESSAGE = "숫자를 입력해주세요 : ";
+    private final static String CONTINUE_MESSAGE = "게임을 새로 시작하려면 1, 종료하려면 2를 입력하세요.";
 
-    public static void printStartGameMessage() {
-        System.out.println("숫자 야구 게임을 시작합니다.");
+    public static void printStartGame() {
+        System.out.println(START_MESSAGE);
     }
-    public static List<Integer> inputNumber() {
+
+    public static Answers inputNumber() {
+        System.out.print(INPUT_MESSAGE);
         try {
-            System.out.print("숫자를 입력해주세요 : ");
-            String picks = Console.readLine();
-            List<Integer> pickNumbers = Arrays.stream(picks.split(""))
-                                    .map(Integer::parseInt)
-                                    .collect(toList());
-            PickNumberValidation.checkValidInput(pickNumbers);
-            return pickNumbers;
+            String inputNumber = Console.readLine();
+            List<Answer> answerList = Arrays.stream(inputNumber.split(""))
+                    .map(Integer::parseInt)
+                    .map(Answer::new)
+                    .toList();
+            return Answers.from(answerList);
         } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("잘못된 입력입니다.");
+            throw new IllegalArgumentException();
         }
     }
-    public static boolean askGameEnd() {
-        try {
-            System.out.println("게임을 새로 시작하려면 1, 종료하려면 2를 입력하세요.");
-            int restartBtn = Integer.parseInt(Console.readLine());
-            ExitValidation.checkValidExit(restartBtn);
-            return restartBtn == 2;
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("숫자를 입력해주세요.");
-        }
+
+    public static boolean inputContinue() {
+        System.out.println(CONTINUE_MESSAGE);
+        String inputNumber = Console.readLine();
+        if (!(inputNumber.equals("1") || inputNumber.equals("2")))
+            throw new IllegalArgumentException();
+        return inputNumber.equals("1");
     }
 }
